Adds basic layout

--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-<link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+<link href="/css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <!--[if IE]>
-      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+      <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <![endif]-->
 </head>
 <body>
+
+<nav>
+  <div class="content">
+    <h1>Explorer</h1>
+    <ul>
+      <li><a href="#">View</a></li>
+      <li><a href="#">Filter</a></li>
+    </ul>
+  </div>
+</nav>
 
 </body>
 </html>
