--- a/index.html
+++ b/index.html
@@ -41,9 +41,34 @@
       </ul>
     </div>
 
-    <div class="t"></div>
-    <div class="b"></div>
+    <div class="footer"></div>
   </div>
+
+
+  <div class="box green">
+    <div class="header">
+      <hgroup>
+      <h3>Executing agency</h4>
+      <h2>Regional Intercooperative Market for the Poor</h2>
+      </hgroup>
+    </div>
+
+    <div class="content">
+      <h4>Solutions</h4>
+      <ul>
+        <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
+        <li><a href="#">Other solution name</a> </li>
+      </ul>
+      <h4>More info</h4>
+      <ul>
+        <li><a href="#">Agency profile at FOMIN</a> </li>
+      </ul>
+    </div>
+
+    <div class="footer"></div>
+  </div>
+
+
 
 </div>
 
