--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="map">
 
-  <div class="box">
+  <div class="box golden">
     <div class="header">
       <hgroup>
       <h3>Executing agency</h4>
@@ -52,7 +52,6 @@
       <h2>Regional Intercooperative Market for the Poor</h2>
       </hgroup>
     </div>
-
     <div class="content">
       <h4>Solutions</h4>
       <ul>
@@ -64,7 +63,29 @@
         <li><a href="#">Agency profile at FOMIN</a> </li>
       </ul>
     </div>
+    <div class="footer"></div>
+  </div>
 
+
+
+  <div class="box blue">
+    <div class="header">
+      <hgroup>
+      <h3>Executing agency</h4>
+      <h2>Regional Intercooperative Market for the Poor</h2>
+      </hgroup>
+    </div>
+    <div class="content">
+      <h4>Solutions</h4>
+      <ul>
+        <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
+        <li><a href="#">Other solution name</a> </li>
+      </ul>
+      <h4>More info</h4>
+      <ul>
+        <li><a href="#">Agency profile at FOMIN</a> </li>
+      </ul>
+    </div>
     <div class="footer"></div>
   </div>
 
