Adds inbox elements

--- a/index.html
+++ b/index.html
@@ -82,15 +82,7 @@
       </hgroup>
     </div>
     <div class="content">
-      <h4>Solutions</h4>
-      <ul>
-        <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
-        <li><a href="#">Other solution name</a> </li>
-      </ul>
-      <h4>More info</h4>
-      <ul>
-        <li><a href="#">Agency profile at FOMIN</a> </li>
-      </ul>
+      <a href="#">View project details</a>
     </div>
     <div class="footer"></div>
   </div>
