--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             
             <div class="filter">
                 <div class="content">
+                    <h3>By solution</h3>
+                    <ul>
+                    	<li>All</li>
+                    	<li>Only fomin solutions</li>
+                    </ul>
+
                 </div>
                 <div class="t"></div>
                 <div class="b"></div>
@@ -43,7 +49,7 @@
 <div class="box golden">
     <div class="header">
         <hgroup>
-        <h3>Executing agency</h4>
+        <h4>Executing agency</h4>
         <h2>Regional Intercooperative Market for the Poor</h2>
         </hgroup>
     </div>
@@ -67,7 +73,7 @@
 <div class="box green">
     <div class="header">
         <hgroup>
-        <h3>Executing agency</h4>
+        <h4>Executing agency</h4>
         <h2>Regional Intercooperative Market for the Poor</h2>
         </hgroup>
     </div>
@@ -90,7 +96,7 @@
 <div class="box blue">
     <div class="header">
         <hgroup>
-        <h3>Executing agency</h4>
+        <h4>Executing agency</h4>
         <h2>Regional Intercooperative Market for the Poor</h2>
         </hgroup>
     </div>
