Improves filter margins

--- a/index.html
+++ b/index.html
@@ -29,8 +29,19 @@
                 <div class="content">
                     <h3>By solution</h3>
                     <ul>
-                    	<li>All</li>
-                    	<li>Only fomin solutions</li>
+                    	<li><a href="#">All</a></li>
+                    	<li><a href="#">Only fomin solutions</a></li>
+                    </ul>
+
+                    <hr />
+
+                    <h3>By topic</h3>
+                    <ul>
+                        <li><a href="#">Sustainable tourism</a></li>
+                        <li><a href="#">Local economic dev.</a></li>
+                        <li><a href="#">Youth employment</a></li>
+                        <li><a href="#">Local economic dev.</a></li>
+                        <li><a href="#">Women entrepeneurship</a></li>
                     </ul>
 
                 </div>
