--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <h3>By topic</h3>
                     <ul>
-                        <li><a href="#">Sustainable tourism</a></li>
+                        <li class="selected"><a href="#">Sustainable tourism</a></li>
                         <li><a href="#">Local economic dev.</a></li>
                         <li><a href="#">Youth employment</a></li>
                         <li><a href="#">Local economic dev.</a></li>
