Adds radio buttons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="filter">
                 <div class="content">
                     <h3>By solution</h3>
-                    <ul>
+                    <ul class="radio">
                     	<li><a href="#">All</a></li>
                     	<li><a href="#">Only fomin solutions</a></li>
                     </ul>
@@ -36,7 +36,7 @@
                     <hr />
 
                     <h3>By topic</h3>
-                    <ul>
+                    <ul class="ticks">
                         <li class="selected"><a href="#">Sustainable tourism</a></li>
                         <li><a href="#">Local economic dev.</a></li>
                         <li><a href="#">Youth employment</a></li>
