'All' option is selected by default

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="content">
                     <h3>By solution</h3>
                     <ul class="radio">
-                        <li><a href="#">All</a></li>
+                        <li class="selected"><a href="#">All</a></li>
                         <li><a href="#">Only fomin solutions</a></li>
                     </ul>
 
