--- a/infobox.html
+++ b/infobox.html
@@ -12,7 +12,7 @@
 <script src="http://www.google.com/jsapi"></script>
 <script>google.load("jquery", "1.7.1");</script>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
+<script type="text/javascript" src="http://aps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
 </head>
@@ -29,7 +29,7 @@
                 <div class="content">
                     <h3>By solution</h3>
                     <ul class="radio">
-                    	<li><a href="#">All</a></li>
+                        <li class="selected"><a href="#">All</a></li>
                     	<li><a href="#">Only fomin solutions</a></li>
                     </ul>
 
