Adds new tab. Adds toggle between multiple tabs

--- a/index.html
+++ b/index.html
@@ -23,8 +23,38 @@
     <div class="content">
         <h1>Explorer</h1>
         <ul>
-            <li><a href="#">View</a></li>
-            <li><a href="#" class="toggle-filter">Filter</a>
+            <li>
+            <a href="#" data-toggle="filter">Iati</a>
+            <div class="filter">
+                <div class="content">
+                    <h3>By solution</h3>
+                    <ul class="radio">
+                        <li class="selected"><a href="#">All</a></li>
+                        <li><a href="#">Only fomin solutions</a></li>
+                    </ul>
+                </div>
+                <div class="t"></div>
+                <div class="b"></div>
+            </div>
+            </li>
+
+            <li><a href="#" data-toggle="filter">View</a>
+            
+            <div class="filter">
+                <div class="content">
+                    <h3>By solution</h3>
+                    <ul class="radio">
+                        <li class="selected"><a href="#">All</a></li>
+                        <li><a href="#">Only fomin solutions</a></li>
+                    </ul>
+                </div>
+                <div class="t"></div>
+                <div class="b"></div>
+            </div>
+            
+            </li>
+            <li>
+            <a href="#" data-toggle="filter">Filter</a>
 
             <div class="filter">
                 <div class="content">
