Adds new filter box

--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
             <li>
             <a href="#" data-toggle="filter">Filter</a>
 
-            <div class="filter">
-                <div class="content">
+            <div class="filter big">
+                <div class="content cf">
                     <h3>By solution</h3>
                     <ul class="radio">
                         <li class="selected"><a href="#">All</a></li>
                         <li><a href="#">Only fomin solutions</a></li>
                     </ul>
-
-                    <hr />
 
                     <h3>By topic</h3>
                     <ul class="ticks">
