Adds view filter background

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 
             <li><a href="#" data-toggle="filter">View</a>
             
-            <div class="filter">
+            <div class="filter view">
                 <div class="content">
                     <h3>By solution</h3>
-                    <ul class="radio">
-                        <li class="selected"><a href="#">All</a></li>
-                        <li><a href="#">Only fomin solutions</a></li>
+                    <ul class="ticks">
+                        <li class="selected"><a href="#">Projects</a></li>
+                        <li><a href="#">Executive agencies</a></li>
+                        <li><a href="#">Ashoka fellows</a></li>
                     </ul>
                 </div>
                 <div class="t"></div>
@@ -58,13 +59,13 @@
 
             <div class="filter big">
                 <div class="content cf">
-                    <h3>By solution</h3>
+                    <h3 class="solution">By solution</h3>
                     <ul class="radio">
                         <li class="selected"><a href="#">All</a></li>
                         <li><a href="#">Only fomin solutions</a></li>
                     </ul>
 
-                    <h3>By topic</h3>
+                    <h3 class="topic">By topic</h3>
                     <ul class="ticks">
                         <li class="selected"><a href="#">Sustainable tourism</a></li>
                         <li><a href="#">Local economic dev.</a></li>
