Adds view filter tab

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
             <li><a href="#" data-toggle="filter">View</a>
             
             <div class="filter view">
-                <div class="content">
-                    <h3>By solution</h3>
+                <div class="content cf">
+                    <ul class="symbols">
+                        <li><div class="icon projects"></div></li>
+                        <li><div class="icon agencies"></div></li>
+                    </ul>
                     <ul class="ticks">
-                        <li class="selected"><a href="#">Projects</a></li>
+                        <li><a href="#">Projects</a></li>
                         <li><a href="#">Executive agencies</a></li>
                         <li><a href="#">Ashoka fellows</a></li>
                     </ul>
