Adds close button

--- a/infobox.html
+++ b/infobox.html
@@ -45,7 +45,6 @@
                         </ul>
 
                     </div>
-                    <a href="#" class="close"></a>
                     <div class="t"></div><div class="b"></div>
                 </div>
 
@@ -100,6 +99,7 @@
                     <li><a href="#">Fellow profile at ASHOKA</a> </li>
                 </ul>
             </div>
+            <a href="#" class="close"></a>
             <div class="t"></div><div class="b"></div>
         </div>
 
@@ -109,11 +109,17 @@
             <div class="content">
                 <div class="header">
                     <hgroup>
-                    <h4>Executing agency</h4>
-                    <h2>Regional Intercooperative Market for the Poor</h2>
+                    <h4>Nexso project</h4>
+                    <h2 class="no_border">Regional Intercooperative Market for the Poor</h2>
                     </hgroup>
                 </div>
-                <a href="#">View project details</a>
+                <a href="#" class="btn">View project details</a>
+                <h4>Solutions</h4>
+                <ul>
+                    <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
+                    <li><a href="#">Other solution name</a> </li>
+                </ul>
+
             </div>
             <a href="#" class="close"></a>
             <div class="t"></div><div class="b"></div>
