--- a/infobox.html
+++ b/infobox.html
@@ -12,7 +12,7 @@
         <script src="http://www.google.com/jsapi"></script>
         <script>google.load("jquery", "1.7.1");</script>
 
-        <script type="text/javascript" src="http://aps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
         <script type="text/javascript" src="/js/app.js"> </script>
 
     </head>
@@ -124,5 +124,6 @@
             <a href="#" class="close"></a>
             <div class="t"></div><div class="b"></div>
         </div>
+        <div id="map"></div>
     </body>
 </html>
