--- a/aside.html
+++ b/aside.html
@@ -54,10 +54,8 @@
         </div>
         </nav>
 
-        <div id="map"></div>
-
-        <div class="box golden">
-
+        <aside> 
+        
             <div class="content">
                 <div class="header">
                     <hgroup>
@@ -65,64 +63,18 @@
                     <h2>Regional Intercooperative Market for the Poor</h2>
                     </hgroup>
                 </div>
-                <h4>Solutions</h4>
                 <ul>
-                    <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
-                    <li><a href="#">Other solution name</a> </li>
-                </ul>
-                <h4>More info</h4>
-                <ul>
-                    <li><a href="#">Agency profile at FOMIN</a> </li>
-                </ul>
-            </div>
-
-            <a href="#" class="close"></a>
-            <div class="t"></div><div class="b"></div>
-        </div>
-
-
-        <div class="box green">
-            <div class="content">
-                <div class="header">
-                    <hgroup>
-                    <h4>Ashoka fellow</h4>
-                    <h2>Regional Intercooperative Market for the Poor</h2>
-                    </hgroup>
-                </div>
-                <h4>Solutions</h4>
-                <ul>
-                    <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
-                    <li><a href="#">Other solution name</a> </li>
-                </ul>
-                <h4>More info</h4>
-                <ul>
-                    <li><a href="#">Fellow profile at ASHOKA</a> </li>
+                    <li class="icon money"><h4>Funded amount</h4><a href="#">$231.000</a> </li>
+                    <li class="icon calendar"><h4>Solutions</h4><a href="#">Other solution name</a> </li>
+                    <li class="icon marker"><h4>Solutions</h4><a href="#">Agency profile at FOMIN</a> </li>
+                    <li class="icon gear"><h4>Solutions</h4><a href="#">Irrigation in extreme unfertile terrain</a> </li>
+                    <li class="icon star"><h4>Solutions</h4><a href="#">Other solution name</a> </li>
+                    <li class="icon plus"><h4>More information</h4><a href="#">Agency profile at FOMIN</a> </li>
                 </ul>
             </div>
             <a href="#" class="close"></a>
-            <div class="t"></div><div class="b"></div>
-        </div>
+        </aside>
+        <div id="map"></div>
 
-
-
-        <div class="box blue">
-            <div class="content">
-                <div class="header">
-                    <hgroup>
-                    <h4>Nexso project</h4>
-                    <h2 class="no_border">Regional Intercooperative Market for the Poor</h2>
-                    </hgroup>
-                </div>
-                <a href="#" class="btn">View project details</a>
-                <h4>Solutions</h4>
-                <ul>
-                    <li><a href="#">Irrigation in extreme unfertile terrain</a> </li>
-                    <li><a href="#">Other solution name</a> </li>
-                </ul>
-
-            </div>
-            <a href="#" class="close"></a>
-            <div class="t"></div><div class="b"></div>
-        </div>
     </body>
 </html>
