--- a/infobox.html
+++ b/infobox.html
@@ -52,6 +52,7 @@
                 </li>
             </ul>
         </div>
+        <div class="shadow"></div>
         </nav>
 
         <div id="map"></div>
