Adds timeline bkg

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <ul>
             <li>
             <a href="#" data-toggle="filter">Iati</a>
-            <div class="filter">
-                <div class="content">
-                    <h3>By solution</h3>
-                    <ul class="radio">
-                        <li class="selected"><a href="#">All</a></li>
-                        <li><a href="#">Only fomin solutions</a></li>
+            <div class="filter iati">
+                <div class="content cf">
+                    <ul class="symbols">
+                        <li><div class="icon iati"></div></li>
                     </ul>
+                    <h3>Open data (IATI)</h3>
+                    <p>Powered by <a href="#">OpenAidRegister</a></p>
                 </div>
                 <div class="t"></div>
                 <div class="b"></div>
@@ -89,6 +89,7 @@
     <div class="shadow"></div>
 </nav>
 
+<div id="timeline"></div>
 <div id="map"></div>
 
 </body>
