--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script>google.load("jquery", "1.7.1");</script>
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
+<script type="text/javascript" src="/js/jquery-ui-1.8.18.custom.min.js"> </script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
 </head>
@@ -89,7 +90,7 @@
     <div class="shadow"></div>
 </nav>
 
-<div id="timeline"></div>
+<div id="timeline"><div class="slider"></div></div>
 <div id="map"></div>
 
 </body>
