--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                     <ul class="symbols">
                         <li><div class="icon iati"></div></li>
                     </ul>
+                    <div class="legend">
                     <h3>Open data (IATI)</h3>
                     <p>Powered by <a href="#">OpenAidRegister</a></p>
+                </div>
                 </div>
                 <div class="t"></div>
                 <div class="b"></div>
