Adds LocalStorage to store the state of the ticks and radio elements

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <li><div class="icon agencies"></div></li>
                     </ul>
                     <ul class="ticks">
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Executive agencies</a></li>
-                        <li><a href="#">Ashoka fellows</a></li>
+                        <li id="projects"><a href="#">Projects</a></li>
+                        <li id="agencies"><a href="#">Executive agencies</a></li>
+                        <li id="fellows"><a href="#">Ashoka fellows</a></li>
                     </ul>
                 </div>
                 <div class="t"></div>
@@ -67,17 +67,17 @@
                 <div class="content cf">
                     <h3 class="solution">By solution</h3>
                     <ul class="radio">
-                        <li class="selected"><a href="#">All</a></li>
-                        <li><a href="#">Only fomin solutions</a></li>
+                        <li id="all"><a href="#">All</a></li>
+                        <li id="solutions"><a href="#">Only fomin solutions</a></li>
                     </ul>
 
                     <h3 class="topic">By topic</h3>
                     <ul class="ticks">
-                        <li class="selected"><a href="#">Sustainable tourism</a></li>
-                        <li><a href="#">Local economic dev.</a></li>
-                        <li><a href="#">Youth employment</a></li>
-                        <li><a href="#">Local economic dev.</a></li>
-                        <li><a href="#">Women entrepeneurship</a></li>
+                        <li id="tourism"><a href="#">Sustainable tourism</a></li>
+                        <li id="local"><a href="#">Local economic dev.</a></li>
+                        <li id="employment"><a href="#">Youth employment</a></li>
+                        <li id="local2"><a href="#">Local economic dev.</a></li>
+                        <li id="women"><a href="#">Women entrepeneurship</a></li>
                     </ul>
 
                 </div>
