--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
 <script type="text/javascript" src="/js/jquery-ui-1.8.18.custom.min.js"> </script>
+<script type="text/javascript" src="/js/vendor/underscore-1.3.1.js"> </script>
+<script type="text/javascript" src="/js/vendor/backbone.js"> </script>
+<script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
 </head>
