--- a/backbone.html
+++ b/backbone.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="/js/vendor/underscore-1.3.1.js"> </script>
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
 <script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
+<script type="text/javascript" src="/js/filters.js"> </script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
 </head>
