--- a/backbone.html
+++ b/backbone.html
@@ -19,11 +19,11 @@
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
 <script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="/js/filters.js"> </script>
-<script type="text/javascript" src="/js/d3.min.js"></script>
+<script type="text/javascript" src="/js/d3.v2.min.js"></script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
 </head>
-<body onload="initialize()">
+<body>
   <nav>
   <div class="content">
     <h1>Explorer</h1>
@@ -103,7 +103,6 @@
     <ul></ul>
   </div>
 
-  <div id="timeline"><div class="slider"></div></div>
   <div id="map"></div>
 
 </body>
