--- a/backbone.html
+++ b/backbone.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
 <script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="/js/filters.js"> </script>
+<script type="text/javascript" src="/js/infobox.js"> </script>
 <script type="text/javascript" src="/js/d3.v2.min.js"></script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
