Adds/removes points

--- a/backbone.html
+++ b/backbone.html
@@ -57,7 +57,7 @@
           <ul class="ticks">
             <li id="projects"><a href="#">Projects</a></li>
             <li id="agencies"><a href="#">Executive agencies</a></li>
-            <li id="fellows"><a href="#">Ashoka fellows</a></li>
+            <li id="ashoka"><a href="#">Ashoka fellows</a></li>
           </ul>
         </div>
         <div class="t"></div>
