--- a/backbone.html
+++ b/backbone.html
@@ -13,7 +13,7 @@
 <script src="http://www.google.com/jsapi"></script>
 <script>google.load("jquery", "1.7.1");</script>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
 <script type="text/javascript" src="/js/jquery-ui-1.8.18.custom.min.js"> </script>
 <script type="text/javascript" src="/js/vendor/underscore-1.3.1.js"> </script>
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
@@ -81,8 +81,9 @@
             <li id="tourism"><a href="#">Sustainable tourism</a></li>
             <li id="local"><a href="#">Local economic dev.</a></li>
             <li id="employment"><a href="#">Youth employment</a></li>
-            <li id="local2"><a href="#">Local economic dev.</a></li>
-            <li id="women"><a href="#">Women entrepeneurship</a></li>
+            <li id="woman"><a href="#">Women entrepeneurship</a></li>
+            <li id="financing"><a href="#">Early stage financing</a></li>
+            <li id="rural"><a href="#">Rural microfinance</a></li>
           </ul>
 
         </div>
