Renames tab names

--- a/backbone.html
+++ b/backbone.html
@@ -68,7 +68,7 @@
       <li>
       <a href="#" data-toggle="filter">Filter</a>
 
-      <div class="filter big">
+      <div class="filter filters">
         <div class="content cf">
           <h3 class="solution">By solution</h3>
           <ul class="radio">
