--- a/backbone.html
+++ b/backbone.html
@@ -21,6 +21,8 @@
 <script type="text/javascript" src="/js/filters.js"> </script>
 <script type="text/javascript" src="/js/infobox.js"> </script>
 <script type="text/javascript" src="/js/d3.v2.min.js"></script>
+ <script type="text/javascript" src="/js/d3.geo.min.js"></script>
+    <script type="text/javascript" src="/js/d3.geom.min.js"></script>
 <script type="text/javascript" src="/js/app.js"> </script>
 
 </head>
