--- a/backbone.html
+++ b/backbone.html
@@ -14,17 +14,14 @@
 <script>google.load("jquery", "1.7.1");</script>
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
-<script type="text/javascript" src="/js/jquery-ui-1.8.18.custom.min.js"> </script>
+<script type="text/javascript" src="/js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
 <script type="text/javascript" src="/js/vendor/underscore-1.3.1.js"> </script>
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
+<script type="text/javascript" src="/js/vendor/GeoJSON.js"> </script>
 <script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="/js/filters.js"> </script>
 <script type="text/javascript" src="/js/infobox.js"> </script>
-<script type="text/javascript" src="/js/d3.v2.min.js"></script>
- <script type="text/javascript" src="/js/d3.geo.min.js"></script>
-    <script type="text/javascript" src="/js/d3.geom.min.js"></script>
 <script type="text/javascript" src="/js/app.js"> </script>
-
 </head>
 <body>
   <nav>
