--- a/backbone.html
+++ b/backbone.html
@@ -99,6 +99,26 @@
   </nav>
 
   <div id="map"></div>
+  <aside> 
+
+  <div class="content">
+    <div class="header">
+      <hgroup>
+      <h4>Executing agency</h4>
+      <h2>Regional Intercooperative Market for the Poor</h2>
+      </hgroup>
+    </div>
+    <ul>
+      <li class="icon money"><h4>Funded amount</h4><a href="#">$231.000</a> </li>
+      <li class="icon calendar"><h4>Solutions</h4><a href="#">Other solution name</a> </li>
+      <li class="icon marker"><h4>Solutions</h4><a href="#">Agency profile at FOMIN</a> </li>
+      <li class="icon gear"><h4>Solutions</h4><a href="#">Irrigation in extreme unfertile terrain</a> </li>
+      <li class="icon star"><h4>Solutions</h4><a href="#">Other solution name</a> </li>
+      <li class="icon plus"><h4>More information</h4><a href="#">Agency profile at FOMIN</a> </li>
+    </ul>
+  </div>
+  <a href="#" class="close"></a>
+  </aside>
 
 </body>
 </html>
