--- a/backbone.html
+++ b/backbone.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
 <script type="text/javascript" src="/js/vendor/GeoJSON.js"> </script>
 <script type="text/javascript" src="/js/vendor/d3.v2.min.js"> </script>
+<script type="text/javascript" src="/js/vendor/accounting.min.js"> </script>
 <script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="/js/filters.js"> </script>
 <script type="text/javascript" src="/js/infobox.js"> </script>
@@ -109,12 +110,12 @@
       </hgroup>
     </div>
     <ul>
-      <li class="icon money"><h4>Funded amount</h4><a href="#">$231.000</a> </li>
-      <li class="icon calendar"><h4>Solutions</h4><a href="#">Other solution name</a> </li>
-      <li class="icon marker"><h4>Solutions</h4><a href="#">Agency profile at FOMIN</a> </li>
-      <li class="icon gear"><h4>Solutions</h4><a href="#">Irrigation in extreme unfertile terrain</a> </li>
-      <li class="icon star"><h4>Solutions</h4><a href="#">Other solution name</a> </li>
-      <li class="icon plus"><h4>More information</h4><a href="#">Agency profile at FOMIN</a> </li>
+      <li class="icon budget money"><h4>Funded amount</h4><span>$231.000</span> </li>
+      <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Aproval date</span></li>
+      <li class="icon location marker"><h4>Location</h4><a href="#">Agency profile at FOMIN</a> </li>
+      <li class="icon agency gear"><h4>Executing Agency</h4><a href="#" target="_blank">Irrigation in extreme unfertile terrain</a> </li>
+      <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">Other solution name</a> </li>
+      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">Agency profile at FOMIN</a> </li>
     </ul>
   </div>
   <a href="#" class="close"></a>
