--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <link href="/css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
