--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <script src="http://www.google.com/jsapi"></script>
 <script>google.load("jquery", "1.7.1");</script>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&sensor=false"> </script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
 <script type="text/javascript" src="/js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
 <script type="text/javascript" src="/js/vendor/underscore-1.3.1.js"> </script>
 <script type="text/javascript" src="/js/vendor/backbone.js"> </script>
@@ -119,6 +119,5 @@
   </div>
   <a href="#" class="close"></a>
   </aside>
-
 </body>
 </html>
