--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <![endif]-->
 
-<script src="http://www.google.com/jsapi"></script>
-<script>google.load("jquery", "1.7.1");</script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
 <script type="text/javascript" src="/js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
