Adds ashoka icon

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
           <ul class="symbols">
             <li><div class="icon projects"></div></li>
             <li><div class="icon agencies"></div></li>
+            <li><div class="icon ashokas"></div></li>
           </ul>
           <ul class="ticks">
             <li id="projects"><a href="#">Projects</a></li>
