Initial loading of things

--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,9 @@
             <li><div class="icon ashokas"></div></li>
           </ul>
           <ul class="ticks">
-            <li id="projects"><a href="#">Projects</a></li>
-            <li id="agencies"><a href="#">Executive agencies</a></li>
-            <li id="ashokas"><a href="#">Ashoka fellows</a></li>
+            <li id="projects" class="selected"><a href="#">Projects</a></li>
+            <li id="agencies" class="selected"><a href="#">Executive agencies</a></li>
+            <li id="ashokas" class="selected"><a href="#">Ashoka fellows</a></li>
           </ul>
         </div>
         <div class="t"></div>
