Shows google logo. Tweaks infowindow position. Makes projects style more noticiable

--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,7 @@
   </nav>
 
   <div id="map"></div>
-  <aside> 
-
+  <aside class="hidden"> 
   <div class="content">
     <div class="header">
       <hgroup>
