--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<link href="/css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
+<link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 <!--[if IE]>
       <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -13,15 +13,15 @@
 <script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
-<script type="text/javascript" src="/js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
-<script type="text/javascript" src="/js/vendor/underscore-1.3.1.js"> </script>
-<script type="text/javascript" src="/js/vendor/backbone.js"> </script>
-<script type="text/javascript" src="/js/vendor/GeoJSON.js"> </script>
-<script type="text/javascript" src="/js/vendor/accounting.min.js"> </script>
-<script type="text/javascript" src="/js/backbone.cartodb.js"> </script>
-<script type="text/javascript" src="/js/filters.js"> </script>
-<script type="text/javascript" src="/js/infobox.js"> </script>
-<script type="text/javascript" src="/js/app.js"> </script>
+<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
+<script type="text/javascript" src="js/vendor/underscore-1.3.1.js"> </script>
+<script type="text/javascript" src="js/vendor/backbone.js"> </script>
+<script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
+<script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
+<script type="text/javascript" src="js/backbone.cartodb.js"> </script>
+<script type="text/javascript" src="js/filters.js"> </script>
+<script type="text/javascript" src="js/infobox.js"> </script>
+<script type="text/javascript" src="js/app.js"> </script>
 </head>
 <body>
   <nav>
