--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="js/filters.js"> </script>
 <script type="text/javascript" src="js/infobox.js"> </script>
+<script type="text/javascript" src="js/circle.js"> </script>
 <script type="text/javascript" src="js/app.js"> </script>
 </head>
 <body>
