Adds custom zoom controls

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
   <div class="shadow"></div>
   </nav>
 
+  <div id="zoom_controls"></div>
   <div id="map"></div>
   <aside class="hidden"> 
   <div class="content">
