--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+<link href='http://fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
 <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 <!--[if IE]>
 <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <![endif]-->
 
+
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
+<script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
 <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
 <script type="text/javascript" src="js/vendor/underscore-1.3.1.js"> </script>
 <script type="text/javascript" src="js/vendor/backbone.js"> </script>
