--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
 <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
 <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
+<script type="text/javascript" src="js/vendor/date.js"> </script>
+<script type="text/javascript" src="js/vendor/underscore.string.js"> </script>
 <script type="text/javascript" src="js/vendor/underscore-1.3.1.js"> </script>
 <script type="text/javascript" src="js/vendor/backbone.js"> </script>
 <script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
