Adds pretty date

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <![endif]-->
 
-
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
@@ -27,6 +26,7 @@
 <script type="text/javascript" src="js/filters.js"> </script>
 <script type="text/javascript" src="js/infobox.js"> </script>
 <script type="text/javascript" src="js/circle.js"> </script>
+<script type="text/javascript" src="js/helpers.js"> </script>
 <script type="text/javascript" src="js/app.js"> </script>
 </head>
 <body>
@@ -115,11 +115,11 @@
     </div>
     <ul>
       <li class="icon budget money"><h4>Funded amount</h4><span>$231.000</span> </li>
-      <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Aproval date</span></li>
-      <li class="icon location marker"><h4>Location</h4><a href="#">Agency profile at FOMIN</a> </li>
-      <li class="icon agency gear"><h4>Executing Agency</h4><a href="#" target="_blank">Irrigation in extreme unfertile terrain</a> </li>
-      <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">Other solution name</a> </li>
-      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">Agency profile at FOMIN</a> </li>
+      <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Date not available</span></li>
+      <li class="icon location marker"><h4>Location</h4><a href="#">Location not available</a> </li>
+      <li class="icon agency gear"><h4>Executing Agency</h4><a href="#" target="_blank">...</a> </li>
+      <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">...</a> </li>
+      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">...</a> </li>
     </ul>
   </div>
   <a href="#" class="close"></a>
