Adds pretty date

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <![endif]-->
 
+
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
@@ -118,8 +119,8 @@
       <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Date not available</span></li>
       <li class="icon location marker"><h4>Location</h4><a href="#">Location not available</a> </li>
       <li class="icon agency gear"><h4>Executing Agency</h4><a href="#" target="_blank">...</a> </li>
-      <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">...</a> </li>
-      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">...</a> </li>
+      <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">Other solution name</a> </li>
+      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">Agency profile at FOMIN</a> </li>
     </ul>
   </div>
   <a href="#" class="close"></a>
