--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <script type="text/javascript" src="js/app.js"> </script>
 </head>
 <body>
-  <nav>
+  <div class="nav">
   <div class="content">
     <h1>Explorer</h1>
     <ul>
@@ -102,11 +102,11 @@
     </ul>
   </div>
   <div class="shadow"></div>
-  </nav>
+  </div>
 
   <div id="zoom_controls"></div>
   <div id="map"></div>
-  <aside class="hidden"> 
+  <div class="aside hidden"> 
   <div class="content">
     <div class="header">
       <hgroup>
@@ -124,6 +124,6 @@
     </ul>
   </div>
   <a href="#" class="close"></a>
-  </aside>
+  </div>
 </body>
 </html>
