--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
   <div class="aside hidden"> 
   <div class="content">
     <div class="header">
-      <hgroup>
-      <h4>Executing agency</h4>
-      <h2>Regional Intercooperative Market for the Poor</h2>
-      </hgroup>
+      <div class="hgroup">
+        <h4>Executing agency</h4>
+        <h2>Regional Intercooperative Market for the Poor</h2>
+      </div>
     </div>
     <ul>
       <li class="icon budget money"><h4>Funded amount</h4><span>$231.000</span> </li>
