--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <li class="icon location marker"><h4>Location</h4><a href="#">Location not available</a> </li>
       <li class="icon agency gear"><h4>Executing Agency</h4><a href="#" target="_blank">...</a> </li>
       <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">Other solution name</a> </li>
-      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">Agency profile at FOMIN</a> </li>
+      <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">External link</a> </li>
     </ul>
   </div>
   <a href="#" class="close"></a>
