--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
 <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
 <script type="text/javascript" src="js/filters.js"> </script>
-<script type="text/javascript" src="js/infobox.js"> </script>
+<script type="text/javascript" src="js/infowindow.js"> </script>
 <script type="text/javascript" src="js/circle.js"> </script>
 <script type="text/javascript" src="js/helpers.js"> </script>
 <script type="text/javascript" src="js/app.js"> </script>
