--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   </div>
 
   <div id="zoom_controls"></div>
+  <div id="timeline"></div>
   <div id="map"></div>
   <div class="aside hidden"> 
   <div class="content">
