Removed console.log

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <li class="selected">2011</li>
           <li>2012</li>
           <li>2013</li>
-          <li>2014</li>
+          <li class="last">2014</li>
         </ul>
       </div>
     </div>
