--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
     </div>
 
     <div id="zoom_controls"></div>
-    <div id="timeline">
-      <div class="slider">
-        <ul class="years">
-          <li>2002</li>
-          <li>2003</li>
-          <li>2004</li>
-          <li class="selected">2005</li>
-          <li class="selected">2006</li>
-          <li class="selected">2007</li>
-          <li class="selected">2008</li>
-          <li class="selected">2009</li>
-          <li class="selected">2010</li>
-          <li class="selected">2011</li>
-          <li>2012</li>
-          <li>2013</li>
-          <li class="last">2014</li>
-        </ul>
-      </div>
-    </div>
+    <!--<div id="timeline">-->
+    <!--  <div class="slider">-->
+    <!--    <ul class="years">-->
+    <!--      <li>2002</li>-->
+    <!--      <li>2003</li>-->
+    <!--      <li>2004</li>-->
+    <!--      <li class="selected">2005</li>-->
+    <!--      <li class="selected">2006</li>-->
+    <!--      <li class="selected">2007</li>-->
+    <!--      <li class="selected">2008</li>-->
+    <!--      <li class="selected">2009</li>-->
+    <!--      <li class="selected">2010</li>-->
+    <!--      <li class="selected">2011</li>-->
+    <!--      <li>2012</li>-->
+    <!--      <li>2013</li>-->
+    <!--      <li class="last">2014</li>-->
+    <!--    </ul>-->
+    <!--  </div>-->
+    <!--</div>-->
 
     <div id="map"></div>
     <div class="aside hidden"> 
