--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <div id="timeline">
       <div class="slider">
         <ul class="years">
-          <li>2002</li>
-          <li>2003</li>
-          <li>2004</li>
+          <li class="selected">2002</li>
+          <li class="selected">2003</li>
+          <li class="selected">2004</li>
           <li class="selected">2005</li>
           <li class="selected">2006</li>
           <li class="selected">2007</li>
@@ -116,9 +116,9 @@
           <li class="selected">2009</li>
           <li class="selected">2010</li>
           <li class="selected">2011</li>
-          <li>2012</li>
-          <li>2013</li>
-          <li class="last">2014</li>
+          <li class="selected">2012</li>
+          <li class="selected">2013</li>
+          <li class="selected last">2014</li>
         </ul>
       </div>
     </div>
