Adds some backbone models

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
+    <script>var Infowindow, Timeline, aside;</script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
     <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
@@ -124,7 +125,7 @@
     </div>
 
     <div id="map"></div>
-    <div class="aside hidden"> 
+    <div id="aside" class="aside hidden"> 
       <div class="content">
         <div class="header">
           <div class="hgroup">
