adds over to the filter links and add link for the IATI download

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <li><div class="icon iati"></div></li>
               </ul>
               <div class="legend">
-                <h3>Open data (IATI)</h3>
-                <p>Powered by <a href="#">OpenAidRegister</a></p>
+                <h3><a href="http://www.openaidregister.org/organizations/104/projects.xml">DOWNLOAD (IATI)</a></h3>
+                <p>Powered by <a href="http://www.openaidregister.org/">OpenAidRegister</a></p>
               </div>
             </div>
             <div class="t"></div>
