--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
     <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
     <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
+    <script type="text/javascript" src="js/spin.min.js"> </script>
     <script type="text/javascript" src="js/filters.js"> </script>
     <script type="text/javascript" src="js/infowindow.js"> </script>
     <script type="text/javascript" src="js/circle.js"> </script>
@@ -144,5 +145,6 @@
       </div>
       <a href="#" class="close"></a>
     </div>
+    <div id="minispinner_wrapper"></div>
   </body>
 </html>
