--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script type="text/javascript" src="js/vendor/backbone.js"> </script>
     <script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
     <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
+    <script type="text/javascript" src="js/vendor/spin.min.js"> </script>
     <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
-    <script type="text/javascript" src="js/spin.min.js"> </script>
     <script type="text/javascript" src="js/filters.js"> </script>
     <script type="text/javascript" src="js/infowindow.js"> </script>
     <script type="text/javascript" src="js/circle.js"> </script>
