--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
     <script type="text/javascript" src="js/filters.js"> </script>
     <script type="text/javascript" src="js/infowindow.js"> </script>
+    <script type="text/javascript" src="js/NexsoMarker.js"> </script>
     <script type="text/javascript" src="js/circle.js"> </script>
     <script type="text/javascript" src="js/helpers.js"> </script>
     <script type="text/javascript" src="js/app.js"> </script>
