Shows agency url on the aside

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <ul>
           <li class="icon budget money"><h4>Funded amount</h4><span>$000.000</span></li>
           <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Date not available</span></li>
-          <li class="icon location marker"><h4>Location</h4><a href="#" target="_blank">Location not available</a></li>
+          <!--<li class="icon location marker"><h4>Location</h4><a href="#" target="_blank">Location not available</a></li>-->
           <li class="icon agency gear"><h4>Executing Agency</h4><a href="#" target="_blank">...</a></li>
           <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">Solution not available</a></li>
           <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">External link</a></li>
