--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="nav">
       <div class="content">
         <h1>Explorer</h1>
-        <ul>
+        <ul class="filters">
           <li>
           <a href="#" data-toggle="filter">Iati</a>
           <div class="filter iati">
@@ -101,6 +101,7 @@
 
           </li>
         </ul>
+        <div class="cancel"></div>
       </div>
       <div class="shadow"></div>
     </div>
