--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>NEXSO</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -12,7 +13,6 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">google.load("jquery", "1.7.1");</script>
 
-    <script>var Infowindow, Timeline, aside;</script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyBjtJpHprawtS8OfQtC9Pb_urVpbZ8gTaM&amp;sensor=false"> </script>
     <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
@@ -24,11 +24,10 @@
     <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
     <script type="text/javascript" src="js/vendor/spin.min.js"> </script>
     <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
-    <script type="text/javascript" src="js/filters.js"> </script>
+    <script type="text/javascript" src="js/helpers.js"> </script>
     <script type="text/javascript" src="js/infowindow.js"> </script>
     <script type="text/javascript" src="js/NexsoMarker.js"> </script>
     <script type="text/javascript" src="js/circle.js"> </script>
-    <script type="text/javascript" src="js/helpers.js"> </script>
     <script type="text/javascript" src="js/app.js"> </script>
   </head>
   <body>
