--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
     <script type="text/javascript" src="js/vendor/date.js"> </script>
     <script type="text/javascript" src="js/vendor/underscore.string.js"> </script>
-    <script type="text/javascript" src="js/vendor/underscore-1.3.1.js"> </script>
+    <script type="text/javascript" src="js/vendor/lodash.min.js"> </script>
     <script type="text/javascript" src="js/vendor/backbone.js"> </script>
     <script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
     <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
