--- a/index.html
+++ b/index.html
@@ -146,5 +146,57 @@
       <a href="#" class="close"></a>
     </div>
     <div id="minispinner_wrapper"></div>
-  </body>
-</html>
+    <script id="infowindow-template" type="text/x-underscore-template">
+      <div class="box <%= overlayType %>">
+      <div class="content">
+      <div class="header">
+      <div class="hgroup">
+      <% if (overlayType == "project") { %>
+        <h4>Nexso project</h4>
+        <h2><%= name %></h2>
+        <% } else if (overlayType == "ashokas") { %>
+          <h4>Ashoka fellow</h4>
+          <h2><%= name %></h2>
+          <% } else if (overlayType == "agencies") { %>
+            <h4>Executing agency</h4>
+            <h2><%= agency_name %></h2>
+            <% } %>
+            </div>
+            </div>
+            <% if (overlayType == "project") { %>
+              <a href="#" class="btn">View project details</a>
+              <h4>Solution</h4>
+              <ul class="solutions">
+              <li><a href="#" target="_blank">…</a> </li>
+              </ul>
+              <% } else if (overlayType == "ashokas") { %>
+                <% if (solution_name) { %>
+                  <h4>Solutions</h4>
+                  <ul>
+                  <% if (solution_name) { %>
+                    <li><a href="<%= solution_url %>" target="_blank"><%= solution_name %></a> </li>
+                    <% } %>
+                    </ul>
+                    <% } %>
+                    <% if (agency_url) {  %>
+                      <h4>More info</h4>
+                      <ul>
+                      <li><a href="<%= agency_url %>" target="_blank">Agency profile at FOMIN</a> </li>
+                      </ul>
+                      <% } %>
+                      <% } else { %>
+                        <% if (agency_url) {  %>
+                          <h4>More info</h4>
+                          <ul>
+                          <li><a href="<%= agency_url %>" target="_blank">Agency profile at FOMIN</a> </li>
+                          </ul>
+                          <% } %>
+                          <%   if (projects) { %><h4>Projects</h4><ul><%= projects %></ul><% } %>
+                          <% } %>
+                          </div>
+                          <a href="#" class="close"></a>
+                          <div class="t"></div><div class="b"></div>
+                          </div>
+                        </script>
+                      </body>
+                    </html>
