--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><div class="icon agencies"></div></li>
                 <li><div class="icon ashokas"></div></li>
               </ul>
-              <ul class="ticks">
+              <ul id="type-filter" class="ticks">
                 <li id="projects" class="selected"><a href="#">Projects</a></li>
                 <li id="agencies" class="selected"><a href="#">Executive agencies</a></li>
                 <li id="ashokas" class="selected"><a href="#">Ashoka fellows</a></li>
@@ -78,13 +78,13 @@
           <div class="filter filters">
             <div class="content cf">
               <h3 class="solution">By solution</h3>
-              <ul class="radio">
+              <ul id="solution-filter" class="radio">
                 <li id="all"><a href="#">All</a></li>
                 <li id="solutions"><a href="#">Only fomin solutions</a></li>
               </ul>
 
               <h3 class="topic">By topic</h3>
-              <ul class="ticks">
+              <ul id="topic-filter" class="ticks">
                 <li id="tourism" class="t1 selected"><a href="#">Sustainable tourism</a></li>
                 <li id="local" class="t2 selected"><a href="#">Local economic dev.</a></li>
                 <li id="employment" class="t3 selected"><a href="#">Youth employment</a></li>
